# Ops_C.A.S.M.

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
core/include/: process_hider.h  process_manager.h  system_info.h  types.h
core/src/: casm_api.cpp  process_hider.cpp  process_manager.cpp  system_info.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  USER_GUIDE.md
scripts/: build.bat  install_deps.bat  run.bat
tests/core/: test_process_manager.cpp  test_system_info.cpp
ui/src/: core_bridge.py  main.py  main_window.py
ui/src/widgets/: __init__.py  affinity_dialog.py  priority_combo.py  search_box.py
ui/styles/: dark_theme.qss
